[gd_scene load_steps=8 format=3 uid="uid://bj6ru11r8d21u"]

[ext_resource type="Script" path="res://card.gd" id="1_0qtmy"]
[ext_resource type="PackedScene" uid="uid://dw2fqx5ptc75j" path="res://Assets/card.glb" id="1_tnrs2"]
[ext_resource type="Resource" uid="uid://c7n4riw6frydi" path="res://CardResources/dork.tres" id="2_xyvb4"]
[ext_resource type="Texture2D" uid="uid://cmwrq3cd8la07" path="res://Assets/gatherer.png" id="3_217eg"]
[ext_resource type="Texture2D" uid="uid://d0iseuse8qa6x" path="res://Assets/dork.png" id="4_nwhnc"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vlmb0"]
resource_local_to_scene = true
shading_mode = 0
albedo_texture = ExtResource("4_nwhnc")

[sub_resource type="BoxShape3D" id="BoxShape3D_sqehs"]
size = Vector3(1.3, 1.8, 0.05)

[node name="Card" type="Node3D" groups=["card"]]
script = ExtResource("1_0qtmy")
card_resource = ExtResource("2_xyvb4")

[node name="card" parent="." instance=ExtResource("1_tnrs2")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, -0.012)

[node name="Cube_002" parent="card" index="1"]
material_override = SubResource("StandardMaterial3D_vlmb0")

[node name="CardName" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
pixel_size = 0.002
text = "Dork"
font_size = 88
outline_size = 44

[node name="PowerLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.45, -0.65, 0)
pixel_size = 0.002
text = "0"
font_size = 132
outline_size = 44

[node name="HealthLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.45, -0.65, 0)
pixel_size = 0.002
text = "1"
font_size = 132
outline_size = 44

[node name="AbilityTexture" type="Sprite3D" parent="."]
transform = Transform3D(0.175, 0, 0, 0, 0.175, 0, 0, 0, 0.175, 0, -0.5, 0)
texture = ExtResource("3_217eg")

[node name="CostTexture" type="Sprite3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.45, 0.5, 0)

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_sqehs")

[connection signal="input_event" from="Area3D" to="." method="_on_area_3d_input_event"]
[connection signal="mouse_entered" from="Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="Area3D" to="." method="_on_area_3d_mouse_exited"]

[editable path="card"]
